--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -8,11 +8,15 @@
         android:icon="@drawable/ic_cloud"
         android:title="Live Weather" />
 
+    <item
+        android:id="@+id/btnshare"
+        android:icon="@drawable/ic_share"
+        android:title="Share"
+        />
 
     <item
         android:id="@+id/aboutUs"
         android:icon="@drawable/ic_cloud"
         android:title="About Page" />
-
 
 </menu>
