--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#89CFF3</color>
     <color name="purple_500">#00A9FF</color>
     <color name="purple_700">#00A9FF</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#EDF8FD</color>
     <color name="teal_700">#CDF5FD</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
