--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff7fe"
-  >
+    android:background="#fff7fe">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -58,11 +57,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-android:textStyle="bold"
         android:text="ABOUT US"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/iv_appImage"
         app:layout_constraintStart_toStartOf="@id/iv_appImage"
         app:layout_constraintTop_toBottomOf="@id/iv_appImage" />
@@ -72,10 +71,10 @@ android:textStyle="bold"
         android:id="@+id/tv_aboutUsContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="12dp"
         android:text="@string/About_Content"
         android:textAlignment="center"
-        android:layout_marginHorizontal="30dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/iv_appImage"
