--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menu_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDF8FD"
-    android:id="@+id/menu_drawer"
     tools:context="com.weather.weatherapp.MainActivity">
 
 
@@ -15,14 +15,12 @@
         android:orientation="vertical">
 
 
-
         <FrameLayout
             android:id="@+id/flheading"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#00A9FF"
-            android:elevation="20dp"
-           >
+            android:elevation="20dp">
 
 
             <androidx.appcompat.widget.Toolbar
@@ -51,14 +49,13 @@
         </FrameLayout>
 
 
-
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_lawyer_ani"
             android:layout_width="210dp"
             android:layout_height="210dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/weather_ani" />
@@ -83,8 +80,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
                     android:background="#EDF8FD"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="@dimen/card_view_content_padding">
 
@@ -137,8 +134,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
                     android:background="#EDF8FD"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="@dimen/card_view_content_padding">
 
@@ -199,9 +196,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#EDF8FD"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:background="#EDF8FD"
                     android:padding="@dimen/card_view_content_padding">
 
                     <ImageView
@@ -253,9 +250,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EDF8FD"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:background="#EDF8FD"
                     android:padding="@dimen/card_view_content_padding">
 
                     <ImageView
@@ -308,9 +305,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#EDF8FD"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
-                android:background="#EDF8FD"
                 android:padding="@dimen/card_view_content_padding">
 
                 <LinearLayout
