--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,12 +6,9 @@
 
         android:id="@+id/action_refresh"
         android:icon="@drawable/refresh"
-        android:title="Refresh"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        />
-
-
+        android:title="Refresh"
+        app:showAsAction="always" />
 
 
 </menu>
