--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:fontFamily="serif"
+        android:fontFamily="@font/protestrevolution_regular"
         android:text="Weather"
         android:textColor="@color/black"
         android:textSize="80sp" />
