--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,18 +48,28 @@
 
         </FrameLayout>
 
+
+        <ImageView
+            android:id="@+id/iv_img"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/image_contentDescription"
+            app:srcCompat="@drawable/snowflake" />
+
+
         <LinearLayout
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/card_view_marginStartEnd"
                 android:layout_marginEnd="@dimen/card_view_marginStartEnd"
-                android:layout_weight="1"
                 android:background="@android:color/white"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="@dimen/card_view_corner_radius"
@@ -109,7 +119,8 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/card_view_marginStartEnd"
                 android:layout_marginEnd="@dimen/card_view_marginStartEnd"
@@ -162,16 +173,13 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/card_view_marginTop"
-            android:orientation="horizontal">
+
 
             <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+                android:layout_marginTop="10dp"
+
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/card_view_marginStartEnd"
                 android:layout_marginEnd="@dimen/card_view_marginStartEnd"
@@ -182,6 +190,7 @@
                 app:cardElevation="@dimen/card_view_elevation">
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#EDF8FD"
@@ -225,7 +234,9 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+                android:layout_marginTop="10dp"
+
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/card_view_marginStartEnd"
                 android:layout_marginEnd="@dimen/card_view_marginStartEnd"
@@ -236,6 +247,7 @@
                 app:cardElevation="@dimen/card_view_elevation">
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EDF8FD"
@@ -277,7 +289,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -399,6 +411,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        </LinearLayout>
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
