--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="main_screen_content_background_color">#EFEFEF</color>
-    <color name="primary_text_color">#363A43</color>
+    <color name="primary_text_color">#000000</color>
     <color name="secondary_text_color">#7A8089</color>
     <color name="divider_background">#e0e0e0</color>
 
