string file added with all string values

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
                             android:textColor="@color/primary_text_color"
                             android:textSize="@dimen/label_text_size"
                             android:textStyle="bold"
-                            tools:text="Weather" />
+                           android:text="@string/weather" />
 
                         <TextView
                             android:id="@+id/tv_main_description"
@@ -118,7 +118,7 @@
 
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="condition" />
+                            tools:text="@string/condition" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -166,7 +166,7 @@
                             android:textColor="@color/primary_text_color"
                             android:textSize="@dimen/label_text_size"
                             android:textStyle="bold"
-                            tools:text="Degree" />
+                           android:text="@string/degree" />
 
                         <TextView
                             android:id="@+id/tv_humidity"
@@ -177,7 +177,7 @@
 
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="per cent" />
+                            tools:text="@string/per_cent" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -229,7 +229,7 @@
                             android:textColor="@color/primary_text_color"
                             android:textSize="@dimen/label_text_size"
                             android:textStyle="bold"
-                            tools:text="Minimum" />
+                          android:text="@string/minimum" />
 
                         <TextView
                             android:id="@+id/tv_max"
@@ -240,7 +240,7 @@
 
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="Maximum" />
+                            tools:text="@string/maximum" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -290,7 +290,7 @@
                             android:textColor="@color/primary_text_color"
                             android:textSize="@dimen/label_text_size"
                             android:textStyle="bold"
-                            tools:text="Wind" />
+                            tools:text="@string/wind" />
 
                         <TextView
                             android:id="@+id/tv_speed_unit"
@@ -298,7 +298,6 @@
                             android:layout_height="wrap_content"
                             android:gravity="end"
                             android:fontFamily="@font/protestrevolution_regular"
-
                             android:text="@string/miles_per_hour"
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size" />
@@ -354,7 +353,7 @@
                             android:textColor="@color/primary_text_color"
                             android:textSize="@dimen/label_text_size"
                             android:textStyle="bold"
-                            tools:text="Name" />
+                            tools:text="@string/name" />
 
                         <TextView
                             android:id="@+id/tv_country"
@@ -365,7 +364,7 @@
 
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="Country" />
+                            tools:text="@string/country" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -404,7 +403,7 @@
 
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="Sunrise" />
+                            tools:text="@string/sunrise" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -427,7 +426,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/secondary_text_color"
                             android:textSize="@dimen/value_text_size"
-                            tools:text="Sunset"
+                            tools:text="@string/sunset"
                             android:fontFamily="@font/protestrevolution_regular"
                             />
                     </LinearLayout>
