--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,7 +13,7 @@
         android:id="@+id/ivBook"
         android:layout_width="wrap_content"
         android:layout_height="350dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="@dimen/_40dp"
         android:src="@drawable/weather_icon"
         app:layout_constraintBottom_toTopOf="@+id/flheadingMain" />
 
@@ -26,7 +26,7 @@
         android:fontFamily="@font/protestrevolution_regular"
         android:text="Weather"
         android:textColor="@color/black"
-        android:textSize="80sp" />
+        android:textSize="@dimen/_80sp" />
 
 
 </LinearLayout>
