--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/protestrevolution_regular"
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
