--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
     tools:context="com.weather.weatherapp.MainActivity">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -435,6 +441,8 @@
         </LinearLayout>
     </LinearLayout>
 
+    </ScrollView>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_menu"
         android:layout_width="wrap_content"
@@ -446,6 +454,7 @@
         app:menu="@menu/side_menu"
         app:theme="@style/ToolbarStyle"
         app:titleTextColor="@android:color/black" />
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
