--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,8 @@
     <color name="primary_text_color">#000000</color>
     <color name="secondary_text_color">#7A8089</color>
     <color name="divider_background">#e0e0e0</color>
+    <color name="edf8fd">#EDF8FD</color>
+    <color name="f7fdff">#F7FDFF</color>
+    <color name="fff7fe">#fff7fe</color>
 
 </resources>
