add version name

--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -39,9 +39,16 @@
         android:id="@+id/ic_share_Code"
         android:icon="@drawable/ic_code"
         android:title="Share Code" />
+
+    <item
         android:id="@+id/ic_open"
         android:icon="@drawable/ic_book"
         android:title="Open Source Library" />
+
+    <item
+        android:id="@+id/ic_version"
+        android:icon="@drawable/ic_version"
+        android:title="Version" />
 
 
 </menu>
