--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,12 +58,12 @@
 
         <ImageView
             android:id="@+id/iv_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/_10dp"
             android:contentDescription="@string/image_contentDescription"
-            app:srcCompat="@drawable/snowflake" />
+            app:srcCompat="@drawable/rain" />
 
         <TextView
             android:fontFamily="@font/protestrevolution_regular"
