add the dialog box

--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -7,4 +7,10 @@
 
         />
 
+    <item android:id="@+id/coordinates"
+        android:title="Coordinates data"
+        android:icon="@drawable/baseline_location_pin_24"
+
+        />
+
 </menu>
