--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/_10dp"
             android:contentDescription="@string/image_contentDescription"
-            app:srcCompat="@drawable/rain" />
+            app:srcCompat="@drawable/rain_pic" />
 
         <TextView
             android:fontFamily="@font/protestrevolution_regular"
