--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -13,4 +13,11 @@
 
         />
 
+    <item android:id="@+id/Sys_Message"
+        android:title="Message"
+        android:icon="@drawable/baseline_message_24"
+
+        />
+
+
 </menu>
