Min-Max Temperature added

--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -20,4 +20,12 @@
         />
 
 
+    <item android:id="@+id/temp_min_max"
+        android:title="Temp Min-Max"
+        android:icon="@drawable/baseline_severe_cold_24"
+
+        />
+
+
+
 </menu>
