Added the sea level

--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -20,4 +20,10 @@
         />
 
 
+    <item android:id="@+id/sea_level"
+        android:title="Sea Level"
+        android:icon="@drawable/baseline_water_drop_24"
+
+        />
+
 </menu>
