Humidity Level Added

--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -33,4 +33,10 @@
 
         />
 
+
+    <item android:id="@+id/humidity_level"
+        android:title="Humidity Level"
+        android:icon="@drawable/baseline_air_24"
+
+        />
 </menu>
